Marked [WIP] sections as :noexport:

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -1533,7 +1533,7 @@ Subcube from Spatio-Temporal Data: Wind Speed
   [34 34 34 34 34 37 37 37 37 37]]]
 #+end_example
 
-* [WIP] Fire Behavior Model
+* [WIP] Fire Behavior Model :noexport:
   :PROPERTIES:
   :CUSTOM_ID: [wip]-fire-behavior-model
   :END:
@@ -10035,7 +10035,7 @@ def read_landfire_rasters_as_space_time_cubes(cube_shape, landfire_file_paths):
         return convert_rasters_to_space_time_cubes(cube_shape, landfire_rasters)
 #+end_src
 
-** [WIP] Testing pyretechnics.burn_cells on Worcester, VT (pyretechnics_test.test_burn_cells)
+** [WIP] Testing pyretechnics.burn_cells on Worcester, VT (pyretechnics_test.test_burn_cells) :noexport:
    :PROPERTIES:
    :CUSTOM_ID: [wip]-testing-pyretechnics.burn_cells-on-worcester,-vt-(pyretechnics_test.test_burn_cells)
    :header-args:python+: :session *pyretechnics_test.test_burn_cells*
@@ -10281,7 +10281,7 @@ def test_read_flammap_outputs():
     return read_flammap_outputs(flammap_file_paths)
 #+end_src
 
-** [WIP] Visualizing the Burned Layers
+** [WIP] Visualizing the Burned Layers :noexport:
    :PROPERTIES:
    :CUSTOM_ID: [wip]-visualizing-the-burned-layers
    :header-args:python+: :session *view-worcester-layers*
