--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -5747,18 +5747,18 @@ Several spotting parameters can be adjusted by the user:
 
 #+NAME: tab:spotting-parameters
 #+caption: User adjustable spotting parameters
-|------------------------------+------------------------------+------------------------------------------------------------------------|
-| Parameter                    | Units                        | Description                                                            |
-|------------------------------+------------------------------+------------------------------------------------------------------------|
-| random_seed                  | $\text{integer}$             | seed for a numpy.random.Generator                                      |
-| heat_per_firebrand           | $\text{kJ}/\text{firebrand}$ | number of kilojoules to produce one firebrand                          |
-| downwind_distance_mean       | $\text{m}$                   | normal distribution mean underpinning lognormal distribution           |
-| fireline_intensity_exponent  | $\text{-}$                   | downwind_distance_mean multiplier [I^fireline_intensity_exponent]      |
-| wind_speed_exponent          | $\text{-}$                   | downwind_distance_mean multiplier [U^wind_speed_exponent]              |
-| downwind_variance_mean_ratio | $\text{m}^2/\text{m}$        | normal distribution variance divided by expected value [Var(X) / E(X)] |
-| crosswind_distance_stdev     | $\text{m}$                   | crosswind normal distribution standard deviation (mean = 0)            |
-| decay_distance               | $\text{m}$                   | spotting distance at which ignition probability is divided by $e$      |
-|------------------------------+------------------------------+------------------------------------------------------------------------|
+|------------------------------+----------------------------------------+------------------------------------------------------------------------|
+| Parameter                    | Units                                  | Description                                                            |
+|------------------------------+----------------------------------------+------------------------------------------------------------------------|
+| random_seed                  | $\text{integer}$ or $\text{Generator}$ | seed for a numpy.random.Generator object                               |
+| heat_per_firebrand           | $\text{kJ}/\text{firebrand}$           | number of kilojoules to produce one firebrand                          |
+| downwind_distance_mean       | $\text{m}$                             | normal distribution mean underpinning lognormal distribution           |
+| fireline_intensity_exponent  | $\text{-}$                             | downwind_distance_mean multiplier [I^fireline_intensity_exponent]      |
+| wind_speed_exponent          | $\text{-}$                             | downwind_distance_mean multiplier [U^wind_speed_exponent]              |
+| downwind_variance_mean_ratio | $\text{m}^2/\text{m}$                  | normal distribution variance divided by expected value [Var(X) / E(X)] |
+| crosswind_distance_stdev     | $\text{m}$                             | crosswind normal distribution standard deviation (mean = 0)            |
+| decay_distance               | $\text{m}$                             | spotting distance at which ignition probability is divided by $e$      |
+|------------------------------+----------------------------------------+------------------------------------------------------------------------|
 
 In this section, we will look at *heat_per_firebrand* and
 *decay_distance* specifically as they have the most direct bearing on
@@ -8012,7 +8012,7 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
     - buffer_width              :: Chebyshev distance from frontier cells to include in tracked cells (Optional)
     - spot_ignitions            :: dictionary of (ignition_time -> ignited_cells) (Optional: needed for spotting)
     - spot_config               :: dictionary of spotting parameters (Optional: needed for spotting)
-      - random_seed                   :: integer to seed a numpy.random.Generator object
+      - random_seed                   :: seed for a numpy.random.Generator object
       - heat_per_firebrand            :: kJ/firebrand
       - downwind_distance_mean        :: meters
       - fireline_intensity_exponent   :: downwind_distance_mean multiplier [I^fireline_intensity_exponent]
@@ -8126,7 +8126,6 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
 #+NAME: run-spread-fire-with-phi-field
 #+begin_src python :results silent
 import numpy as np
-from pprint import pprint
 import pyretechnics.eulerian_level_set as els
 from pyretechnics.space_time_cube import SpaceTimeCube
 
@@ -8223,6 +8222,7 @@ output_matrices = fire_spread_results["output_matrices"] # updated 2D arrays (mu
 #+NAME: run-spread-fire-with-phi-field-stats
 #+begin_src python
 import numpy as np
+from pprint import pprint
 
 #============================================================================================
 # Display summary statistics of our fire spread results
@@ -8233,12 +8233,20 @@ burned_cells = output_matrices["fire_type"] > 0
 
 def get_array_stats(array, use_burn_scar_mask=True):
     array_values_to_analyze = array[burned_cells] if use_burn_scar_mask else array
-    return {
-        "Min"  : np.min(array_values_to_analyze),
-        "Max"  : np.max(array_values_to_analyze),
-        "Mean" : np.mean(array_values_to_analyze),
-        "Stdev": np.std(array_values_to_analyze),
-    }
+    if len(array_values_to_analyze) > 0:
+        return {
+            "Min"  : np.min(array_values_to_analyze),
+            "Max"  : np.max(array_values_to_analyze),
+            "Mean" : np.mean(array_values_to_analyze),
+            "Stdev": np.std(array_values_to_analyze),
+        }
+    else:
+        return {
+            "Min"  : "No Data",
+            "Max"  : "No Data",
+            "Mean" : "No Data",
+            "Stdev": "No Data",
+        }
 
 print("Fire Behavior from Day 2 @ 10:30am - Day 2 @ 6:30pm Spreading from Coordinate (50,50)\n" + "=" * 100)
 
@@ -8423,7 +8431,6 @@ file:pics/els_time_of_arrival.png
 #+NAME: run-spread-fire-with-phi-field-with-spotting
 #+begin_src python :results silent
 import numpy as np
-from pprint import pprint
 import pyretechnics.eulerian_level_set as els
 from pyretechnics.space_time_cube import SpaceTimeCube
 
@@ -8539,6 +8546,7 @@ spot_ignitions  = fire_spread_results.get("spot_ignitions", {}) # remaining fire
 #+NAME: run-spread-fire-with-phi-field-with-spotting-stats
 #+begin_src python
 import numpy as np
+from pprint import pprint
 
 #============================================================================================
 # Display summary statistics of our fire spread results
@@ -8549,12 +8557,20 @@ burned_cells = output_matrices["fire_type"] > 0
 
 def get_array_stats(array, use_burn_scar_mask=True):
     array_values_to_analyze = array[burned_cells] if use_burn_scar_mask else array
-    return {
-        "Min"  : np.min(array_values_to_analyze),
-        "Max"  : np.max(array_values_to_analyze),
-        "Mean" : np.mean(array_values_to_analyze),
-        "Stdev": np.std(array_values_to_analyze),
-    }
+    if len(array_values_to_analyze) > 0:
+        return {
+            "Min"  : np.min(array_values_to_analyze),
+            "Max"  : np.max(array_values_to_analyze),
+            "Mean" : np.mean(array_values_to_analyze),
+            "Stdev": np.std(array_values_to_analyze),
+        }
+    else:
+        return {
+            "Min"  : "No Data",
+            "Max"  : "No Data",
+            "Mean" : "No Data",
+            "Stdev": "No Data",
+        }
 
 print("Fire Behavior from Day 2 @ 10:30am - Day 2 @ 6:30pm Spreading from Coordinate (50,50)\n" + "=" * 100)
 
@@ -8875,7 +8891,7 @@ The ~grow_fire~ function takes a single =world_state= dictionary as input with t
   | simulation_resolution     | Tuple (float, float, float) | (minutes per timestep, meters per row, meters per column)                                 |           |         |
   | simulation_north_angle    | float                       | degrees clockwise from the top of the circle [0,360)                                      | Yes       | 0.0     |
   | simulation_stop_condition | Dictionary {string: float}  | either {'max_burn_duration': minutes} or {'max_burned_area': square_meters}               | Yes       | None    |
-  | random_seed               | number or string            | the seed value to initialize the random number generator                                  | Yes       | None    |
+  | random_seed               | integer or Generator        | the seed value to initialize the random number generator                                  | Yes       | None    |
   | overwrite_outputs         | boolean                     | True or False, whether to mutate or copy the Numpy arrays provided in *output_layer_dict* | Yes       | False   |
   | alpha_suppression         | Dictionary {string: float}  | parameters for the *alpha* suppression algorithm (see table below)                        | Yes       | None    |
   | sdi_suppression           | Dictionary {string: float}  | parameters for the *sdi* suppression algorithm (see table below)                          | Yes       | None    |
